// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`icons > renders IconArrowGiu 1`] = `
<svg
  aria-hidden="true"
  class="h-4 w-4"
  fill="none"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="1.75"
  viewBox="0 0 24 24"
>
  <path
    d="m6 9 6 6 6-6"
  />
</svg>
`;

exports[`icons > renders IconBan 1`] = `
<svg
  aria-hidden="true"
  class="h-4 w-4"
  fill="none"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="1.75"
  viewBox="0 0 24 24"
>
  <circle
    cx="12"
    cy="12"
    r="9"
  />
  <path
    d="m5.6 5.6 12.8 12.8"
  />
</svg>
`;

exports[`icons > renders IconPen 1`] = `
<svg
  aria-hidden="true"
  class="h-4 w-4"
  fill="none"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="1.75"
  viewBox="0 0 24 24"
>
  <path
    d="M12 20h9"
  />
  <path
    d="M16.5 3.5a2.1 2.1 0 0 1 3 3L7 19l-4 1 1-4Z"
  />
</svg>
`;

exports[`icons > renders IconPlus 1`] = `
<svg
  aria-hidden="true"
  class="h-4 w-4"
  fill="none"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="1.75"
  viewBox="0 0 24 24"
>
  <path
    d="M12 5v14"
  />
  <path
    d="M5 12h14"
  />
</svg>
`;

exports[`icons > renders IconTrash 1`] = `
<svg
  aria-hidden="true"
  class="h-4 w-4"
  fill="none"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="1.75"
  viewBox="0 0 24 24"
>
  <path
    d="M4 7h16"
  />
  <path
    d="M9 7V4h6v3"
  />
  <path
    d="m6 7 1 13h10l1-13"
  />
  <path
    d="M10 11v6"
  />
  <path
    d="M14 11v6"
  />
</svg>
`;

exports[`icons > renders IconX 1`] = `
<svg
  aria-hidden="true"
  class="h-4 w-4"
  fill="none"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="1.75"
  viewBox="0 0 24 24"
>
  <path
    d="M6 6 18 18"
  />
  <path
    d="M18 6 6 18"
  />
</svg>
`;
